[package]
name = "rust-maven-proxy"
version = "0.1.0"
authors = ["A248 <theanandbeh@gmail.com>"]
edition = "2018"
description = "Simple and fast maven repository proxy"
repository = "https://github.com/SolarMC-Dev/rust-maven-proxy"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
ron = "0.6.5"
log = { version = "0.4.14", features = ["serde"] }
simple_logger = "1.13.0"
url =  { version = "2.2.2", features = ["serde"] }
hyper = { version = "0.14", features = ["http1", "http2", "client", "server", "tcp"] }
hyper-rustls = "0.22.1"
tokio = { version = "1", features = ["rt", "macros", "signal", "time"] }
futures-util = "0.3.17"

[dev-dependencies]
tempfile = "3.2.0"

[profile.release]
debug = true
